fix bug for empty input

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -109,4 +109,10 @@ li {
   box-shadow: none;
   background-color: transparent;
   color: red;
+  cursor: pointer;
 }
+
+.delete:hover {
+  border-color: #646cff;
+}
+
