--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -129,3 +129,15 @@ li {
 .reset:hover {
   background-color: #ccc;
 }
+
+.caret {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 5px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.rotate {
+  transform: rotate(90deg);
+}
